Fix bug serializer groups and circular reference
